Updates | Update Maven dependencies and library versions + Jacoco Support for VSTS (#807)