@@ -39,22 +39,33 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<junit.platform.version>1.2.0</junit.platform.version>
-		<junit.jupiter.version>5.2.0</junit.jupiter.version>
+		<junit.platform.version>1.3.1</junit.platform.version>
+		<junit.jupiter.version>5.3.1</junit.jupiter.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>azure-keyvault</artifactId>
-			<version>1.0.0</version>
+			<version>1.1.1</version>
 			<optional>true</optional>
 		</dependency>
-
+		<dependency>
+			<groupId>com.microsoft.azure</groupId>
+			<artifactId>azure-keyvault-webkey</artifactId>
+			<version>1.1.1</version>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>adal4j</artifactId>
-			<version>1.6.0</version>
+			<version>1.6.2</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.microsoft.rest</groupId>
+			<artifactId>client-runtime</artifactId>
+			<version>1.6.2</version>
 			<optional>true</optional>
 		</dependency>
 
@@ -120,7 +131,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+	
 	<profiles>
 		<profile>
 			<id>build42</id>
@@ -128,8 +139,9 @@
 				<finalName>${project.artifactId}-${project.version}.jre8-preview</finalName>
 				<plugins>
 					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.7.0</version>
+						<version>3.8.0</version>
 						<configuration>
 							<excludes>
 								<exclude>**/com/microsoft/sqlserver/jdbc/SQLServerJdbc43.java</exclude>
@@ -148,10 +160,42 @@
 							</archive>
 						</configuration>
 					</plugin>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.8.2</version>
+						<executions>
+							<execution>
+								<id>pre-test</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<phase>test</phase>
+								<goals>
+									<goal>report</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.22.0</version>
+						<configuration>
+							<argLine>
+								${argLine} --illegal-access=permit
+							</argLine>
+							<properties>
+								<excludeTags>${skipTestTag}</excludeTags>
+							</properties>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
-
 		<profile>
 			<id>build43</id>
 			<activation>
@@ -161,8 +205,9 @@
 				<finalName>${project.artifactId}-${project.version}.jre10-preview</finalName>
 				<plugins>
 					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.7.0</version>
+						<version>3.8.0</version>
 						<configuration>
 							<excludes>
 								<exclude>**/com/microsoft/sqlserver/jdbc/SQLServerJdbc42.java</exclude>
@@ -184,14 +229,44 @@
 							</archive>
 						</configuration>
 					</plugin>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.8.2</version>
+						<executions>
+							<execution>
+								<id>pre-test</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<phase>test</phase>
+								<goals>
+									<goal>report</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.22.0</version>
+						<configuration>
+							<argLine>
+								${argLine} --illegal-access=permit
+							</argLine>
+							<properties>
+								<excludeTags>${skipTestTag}</excludeTags>
+							</properties>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
-
 	</profiles>
-
 	<build>
-
 		<resources>
 			<resource>
 				<directory>${basedir}</directory>
@@ -200,7 +275,6 @@
 				</includes>
 			</resource>
 		</resources>
-
 		<testResources>
 			<testResource>
 				<directory>src/test/resources</directory>
@@ -216,9 +290,39 @@
 				</includes>
 			</testResource>
 		</testResources>
-
 		<plugins>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.0.0-M2</version>
+				<executions>
+					<execution>
+						<id>enforce-versions</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<bannedPlugins>
+									<!-- will only display a warning but does not fail the build. -->
+									<level>WARN</level>
+									<excludes>
+										<exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>
+									</excludes>
+									<message>Please consider using the maven-invoker-plugin
+										(http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
+								</bannedPlugins>
+								<requireMavenVersion>
+									<version>3.0.5</version>
+								</requireMavenVersion>
+								<requireJavaVersion>
+									<version>10</version>
+								</requireJavaVersion>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -232,27 +336,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.1</version>
-				<executions>
-					<execution>
-						<id>pre-test</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<!-- Create OSGI Headers -->
 			<plugin>
 				<groupId>org.apache.felix</groupId>
@@ -261,7 +344,10 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Export-Package>com.microsoft.sqlserver.jdbc,microsoft.sql</Export-Package>
+						<_exportcontents>export com.microsoft.sqlserver.jdbc</_exportcontents>
+						<_exportcontents>export microsoft.sql</_exportcontents>
+						<_exportcontents>export
+							com.microsoft.sqlserver.jdbc.dataclassification</_exportcontents>
 						<Import-Package>!microsoft.sql,*</Import-Package>
 					</instructions>
 				</configuration>
@@ -275,16 +361,13 @@
 					</execution>
 				</executions>
 			</plugin>
-      
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.0.0</version>
-
 				<configuration>
 					<failOnError>true</failOnError>
 				</configuration>
-
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -294,27 +377,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
-
-				<configuration>
-					<properties>
-						<excludeTags>${skipTestTag}</excludeTags>
-					</properties>
-				</configuration>
-
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.platform</groupId>
-						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>${junit.platform.version}</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
@@ -325,8 +387,6 @@
 					<rulesUri>file:///${session.executionRootDirectory}/maven-version-rules.xml</rulesUri>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
-
 </project>
